# prover

./: README.md  TODO.md  default.nix  prover.cabal  shell.nix
src/Prover/: Defunctionalize.hs  Misc.hs  Names.hs  Parser.hs  Pretty.hs  SMTInterface.hs  Solve.hs  Types.hs
tests/pos/: prop_compose.pr
